# llvm-project-redist

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel
.bazelci/: presubmit.yml
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: bcr-publish.yaml  check-llvm-release.yaml  ci.yaml  release-patched.yaml  release.yaml
releases/: BUILD.bazel
scripts/: BUILD.bazel  transform_extensions_bzl_test.py  transform_module_bazel_test.py  validate_patches.py  validate_patches_repo_test.py  validate_patches_test.py
tools/: BUILD.bazel  build.py  build_test.py  presubmit_logic.py  requirements.in  requirements.txt  run_presubmit.py  run_presubmit_test.py  transform_extensions_bzl.py  transform_extensions_bzl_test.py  transform_module_bazel.py  transform_module_bazel_test.py  validate_patches.py  validate_patches_repo_test.py  validate_patches_test.py
versions/17.0.3/: source.sha256  version.txt
versions/22.1.4/: source.sha256
