# This file is licensed under the Apache License v2.0 with LLVM Exceptions.
# See https://llvm.org/LICENSE.txt for license information.
# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

# Placeholder: overwritten by the release workflow with a transformed version
# of the upstream llvm-project-overlay MODULE.bazel (pins retained, @llvm-raw
# redirection removed). See tools/transform_module_bazel.py.

module(name = "llvm-project")

bazel_dep(name = "rules_python", version = "1.9.0", dev_dependency = True)
