"""llvm-project-redist"""

module(name = "llvm-project")

bazel_dep(name = "rules_python", version = "1.9.0", dev_dependency = True)
bazel_dep(name = "rules_req_compile", version = "1.1.0", dev_dependency = True)

requirements = use_extension("@rules_req_compile//extensions:python.bzl", "requirements", dev_dependency = True)
requirements.parse(
    name = "pip_deps",
    requirements_lock = "//tools:requirements.txt",
)
use_repo(requirements, "pip_deps")
