load("@rules_python//python:py_library.bzl", "py_library")
load("@rules_python//python:py_test.bzl", "py_test")
load("@rules_python//python:py_binary.bzl", "py_binary")
load("@rules_req_compile//:defs.bzl", "py_reqs_compiler", "py_reqs_solution_test")

py_library(
    name = "transform_module_bazel",
    srcs = ["transform_module_bazel.py"],
)

py_test(
    name = "transform_module_bazel_test",
    srcs = ["transform_module_bazel_test.py"],
    deps = [":transform_module_bazel"],
)

py_library(
    name = "transform_extensions_bzl",
    srcs = ["transform_extensions_bzl.py"],
)

py_test(
    name = "transform_extensions_bzl_test",
    srcs = ["transform_extensions_bzl_test.py"],
    deps = [":transform_extensions_bzl"],
)

py_binary(
    name = "validate_patches",
    srcs = ["validate_patches.py"],
)

py_test(
    name = "validate_patches_test",
    srcs = ["validate_patches_test.py"],
    deps = [":validate_patches"],
)

py_test(
    name = "validate_patches_repo_test",
    srcs = ["validate_patches_repo_test.py"],
    data = ["//versions"],
    deps = [":validate_patches"],
)

py_binary(
    name = "build",
    srcs = ["build.py"],
    deps = [
        ":transform_extensions_bzl",
        ":transform_module_bazel",
    ],
)

py_test(
    name = "build_test",
    srcs = ["build_test.py"],
    deps = [":build"],
)

py_library(
    name = "presubmit_logic",
    srcs = ["presubmit_logic.py"],
)

py_binary(
    name = "run_presubmit",
    srcs = ["run_presubmit.py"],
    deps = [
        ":presubmit_logic",
        "@pip_deps//pyyaml",
    ],
)

py_test(
    name = "run_presubmit_test",
    srcs = ["run_presubmit_test.py"],
    deps = [
        ":presubmit_logic",
        ":run_presubmit",
    ],
)

py_reqs_compiler(
    name = "requirements.update",
    requirements_in = "requirements.in",
    requirements_txt = "requirements.txt",
)

py_reqs_solution_test(
    name = "requirements_test",
    compiler = ":requirements.update",
)
